--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notes-app",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://zipzip1312.github.io/React-Notes-App/",
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
+    "serve": "^14.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
